--- a/packages/reflecta-ui/.eslintrc
+++ b/packages/reflecta-ui/.eslintrc
@@ -78,7 +78,7 @@
                         "position": "after"
                     },
                     {
-                        "group": "external",
+                        "group": "parent",
                         "pattern": "@utils/*",
                         "position": "after"
                     },
