--- a/.github/workflows/reflecta-backend-deploy.yml
+++ b/.github/workflows/reflecta-backend-deploy.yml
@@ -66,7 +66,7 @@ jobs:
 
       # Install Production Packages
       - name: Install Production Packages
-        run: npm ci --ignore-scripts -w reflecta-backend
+        run: npm ci -w reflecta-backend
 
       # Copy Packages
       - name: Copy Packages Config
