Configured Prettier to prevent breaking to new lines.

--- a/packages/reflecta-components/.prettierrc.json
+++ b/packages/reflecta-components/.prettierrc.json
@@ -6,8 +6,8 @@
     "htmlWhitespaceSensitivity": "css",
     "insertPragma": false,
     "jsxSingleQuote": true,
-    "printWidth": 0,
-    "proseWrap": "always",
+    "printWidth": 1000,
+    "proseWrap": "never",
     "quoteProps": "consistent",
     "requirePragma": false,
     "semi": true,
