--- a/packages/reflecta-backend/package.json
+++ b/packages/reflecta-backend/package.json
@@ -13,6 +13,7 @@
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.2.4",
+    "openai": "^3.3.0",
     "uuid": "^9.0.0",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
