--- a/packages/reflecta-ui/tsconfig.json
+++ b/packages/reflecta-ui/tsconfig.json
@@ -23,6 +23,12 @@
             "@services/*": [
                 "./src/services/*"
             ],
+            "@store/*": [
+                "./src/store/*"
+            ],
+            "@types": [
+                "./src/types.ts"
+            ],
             "@utils/*": [
                 "./src/utils/*"
             ],
