--- a/packages/reflecta-ui/package.json
+++ b/packages/reflecta-ui/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^20.2.5",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
+    "@types/webpack-env": "^1.18.1",
     "autoprefixer": "^10.4.14",
     "concurrently": "^8.0.1",
     "cross-env": "^7.0.3",
