Updated packages, corrected breaking changes, and enhanced title replacement regex.

--- a/packages/reflecta-components/tsconfig.json
+++ b/packages/reflecta-components/tsconfig.json
@@ -2,6 +2,8 @@
     "compilerOptions": {
         "declaration": true,
         "jsx": "react-jsx",
+        "module": "esnext",
+        "moduleResolution": "node",
         "outDir": "./declarations",
         "paths": {
             "@components/*": [
