--- a/packages/reflecta-ui/.eslintrc
+++ b/packages/reflecta-ui/.eslintrc
@@ -29,6 +29,9 @@
     },
     "root": true,
     "rules": {
+        "@typescript-eslint/no-throw-literal": [
+            0
+        ],
         "class-methods-use-this": [
             0
         ],
