Added basic display of account details.

--- a/packages/reflecta-backend/.eslintrc
+++ b/packages/reflecta-backend/.eslintrc
@@ -81,6 +81,11 @@
                     },
                     {
                         "group": "parent",
+                        "pattern": "@types",
+                        "position": "after"
+                    },
+                    {
+                        "group": "parent",
                         "pattern": "@constants",
                         "position": "after"
                     }
