--- a/packages/reflecta-backend/tsconfig.json
+++ b/packages/reflecta-backend/tsconfig.json
@@ -25,6 +25,9 @@
             ],
             "@utils/*": [
                 "src/utils/*"
+            ],
+            "@types": [
+                "src/types.ts"
             ]
         }
     },
