--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-sort-destructure-keys": "^1.5.0",
-    "husky": "^8.0.3"
+    "husky": "^8.0.3",
+    "lint-staged": "^15.2.0"
   },
   "homepage": "https://github.com/srm985/reflecta-mono#readme",
   "keywords": [
