--- a/packages/reflecta-backend/package.json
+++ b/packages/reflecta-backend/package.json
@@ -27,6 +27,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.2.5",
+    "minimatch": "^5.1.6",
     "node-gyp": "^10.0.1",
     "nodemon": "^3.0.1",
     "onchange": "^7.1.0",
