--- a/.github/workflows/reflecta-backend-deploy.yml
+++ b/.github/workflows/reflecta-backend-deploy.yml
@@ -24,7 +24,7 @@ jobs:
 
       # Install Node Modules
       - name: Install
-        run: npm ci
+        run: npm ci --legacy-peers-deps
 
       # Lint JavaScript/TypeScript
       - name: Lint
@@ -46,7 +46,7 @@ jobs:
 
       # Install Node Modules
       - name: Install
-        run: npm ci
+        run: npm ci --legacy-peers-deps
 
       # Compile TypeScript
       - name: Build
@@ -54,7 +54,7 @@ jobs:
 
       # Install Production Packages
       - name: Install Production Packages
-        run: npm ci --only-production --ignore-scripts -w reflecta-backend
+        run: npm ci --legacy-peers-deps --only-production --ignore-scripts -w reflecta-backend
 
       # Install Production Packages
       - name: Fully Install bcrypt
