Handle deployments if GitHub actions have changed.

--- a/.github/workflows/reflecta-backend-deploy.yml
+++ b/.github/workflows/reflecta-backend-deploy.yml
@@ -3,7 +3,9 @@ name: Reflecta Backend - Build & Deploy
 on:
   push:
     branches: [main, develop]
-    paths: [packages/reflecta-backend/**]
+    paths:
+      - packages/reflecta-backend/**
+      - .github/**
   workflow_dispatch:
     branches: [main, develop]
     paths: [packages/reflecta-backend/**]
