--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "@typescript-eslint/parser": "^7.8.0",
     "concurrently": "^8.2.2",
     "current-git-branch": "^1.1.0",
-    "eslint": "^9.2.0",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-sort-destructure-keys": "^2.0.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.0"
