--- a/packages/reflecta-components/package.json
+++ b/packages/reflecta-components/package.json
@@ -13,12 +13,12 @@
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.5",
-    "@storybook/addon-essentials": "^8.0.10",
-    "@storybook/addon-interactions": "^8.0.10",
-    "@storybook/addon-links": "^8.0.10",
-    "@storybook/blocks": "^8.0.10",
-    "@storybook/react": "^8.0.10",
-    "@storybook/react-webpack5": "^8.0.10",
+    "@storybook/addon-essentials": "^7.6.19",
+    "@storybook/addon-interactions": "^7.6.19",
+    "@storybook/addon-links": "^7.6.19",
+    "@storybook/blocks": "^7.6.19",
+    "@storybook/react": "^7.6.19",
+    "@storybook/react-webpack5": "^7.6.19",
     "@storybook/testing-library": "^0.2.0",
     "@types/node": "^20.2.5",
     "@types/react": "^18.0.33",
@@ -40,7 +40,7 @@
     "prettier": "^3.0.3",
     "sass": "^1.60.0",
     "sass-loader": "^14.0.0",
-    "storybook": "^8.0.10",
+    "storybook": "^7.6.19",
     "style-loader": "^4.0.0",
     "stylelint": "^16.2.0",
     "stylelint-config-rational-order": "^0.1.2",
@@ -73,7 +73,7 @@
   "name": "reflecta-components",
   "scripts": {
     "build": "webpack",
-    "build:storybook": "storybook build",
+    "build:storybook": "export STORYBOOK_TELEMETRY_DEBUG=1 & storybook build",
     "develop": "concurrently --raw \"npm:lint --silent\" \"webpack serve --config ./webpack.config.js --mode=development --port 3003\" \"npm:watch --silent\"",
     "lint": "concurrently --raw \"npm:lint:js --silent\" \"npm:lint:scss --silent\"",
     "lint:fix": "concurrently --raw \"eslint . --ext .ts,.tsx,.js --fix\" \"stylelint src/**/*  --color --allow-empty-input --fix\"",
@@ -82,7 +82,7 @@
     "pre-commit": "cross-env FORCE_COLOR=true lint-staged",
     "prettier": "prettier --write \"src/**/*.scss\"",
     "start": "npm run develop",
-    "storybook": "storybook dev -p 6006",
+    "storybook": "export STORYBOOK_TELEMETRY_DEBUG=1 & storybook dev -p 6006",
     "update": "npm update --save/--save-dev",
     "watch": "concurrently --raw \"npm:watch:js --silent\" \"npm:watch:scss --silent\"",
     "watch:js": "onchange --delay 500 \"src/**/*.(ts|tsx)\" -- npm run lint:js --silent",
