Configure to merge two deployment bundles.

--- a/.github/workflows/refletca-components-deploy.yml
+++ b/.github/workflows/refletca-components-deploy.yml
@@ -134,6 +134,8 @@ jobs:
       - name: Merge Artifacts
         run: |
           mkdir ./bundle/
+          ls
+          ls ./bundle/
           cp -Rf ./bundle-mf/* ./bundle/
           cp -Rf ./bundle-sb/* ./bundle/
 
