Reconfigured SCSS imports to support css-loader@7.

--- a/.github/workflows/refletca-components-deploy.yml
+++ b/.github/workflows/refletca-components-deploy.yml
@@ -136,6 +136,7 @@ jobs:
           mkdir ./bundle/
           ls
           cp -Rf ./bundle-mf/* ./bundle/
+          cp -Rf ./bundle-sb/* ./bundle/
           ls ./bundle/
 
       # Deploy Reflecta Components
