--- a/packages/reflecta-components/.eslintrc
+++ b/packages/reflecta-components/.eslintrc
@@ -34,6 +34,16 @@
                     0
                 ]
             }
+        },
+        {
+            "files": [
+                "constants.ts"
+            ],
+            "rules": {
+                "import/prefer-default-export": [
+                    0
+                ]
+            }
         }
     ],
     "parserOptions": {
