--- a/packages/reflecta-components/package.json
+++ b/packages/reflecta-components/package.json
@@ -5,8 +5,10 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.7.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-google-autocomplete": "^2.7.3"
   },
   "description": "Reflecta UI component library managed via storybook and exposed via Webpack module federation.",
   "devDependencies": {
@@ -20,6 +22,7 @@
     "@storybook/react": "^7.6.19",
     "@storybook/react-webpack5": "^7.6.19",
     "@storybook/testing-library": "^0.2.0",
+    "@types/google.maps": "^3.55.9",
     "@types/node": "^20.2.5",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
