--- a/packages/reflecta-components/tsconfig.json
+++ b/packages/reflecta-components/tsconfig.json
@@ -9,7 +9,7 @@
             "@components/*": [
                 "./src/components/*"
             ],
-            "@constants/*": [
+            "@constants": [
                 "./src/constants.ts"
             ],
             "@modules/*": [
