--- a/packages/reflecta-ui/package.json
+++ b/packages/reflecta-ui/package.json
@@ -18,6 +18,7 @@
     "@babel/preset-env": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.4",
+    "@types/google.maps": "^3.55.9",
     "@types/node": "^20.2.5",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
