--- a/packages/reflecta-backend/package.json
+++ b/packages/reflecta-backend/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "@sendgrid/mail": "^8.1.0",
     "@types/uuid": "^9.0.2",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -24,6 +25,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.21",
+    "@types/google.maps": "^3.55.9",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.2.5",
